--- a/portfolio.html
+++ b/portfolio.html
@@ -51,6 +51,7 @@
     <main>
       <!-- Навігація -->
       <section>
+        <h2 hidden>Projekt</h2>
         <ul>
           <li>
             <button type="button" class="button button-portfolio">All</button>
@@ -74,11 +75,7 @@
             </button>
           </li>
         </ul>
-      </section>
-
-      <!-- Наші  роботи -->
-      <section>
-        <h2 hidden>Projekt</h2>
+        <!-- Наші  роботи -->
         <ul>
           <li>
             <img
@@ -91,7 +88,12 @@
             <p class="base-text">App</p>
           </li>
           <li>
-            <img src="./images/portfolio/img2.jpg" alt="foto mobile phone" />
+            <img
+              src="./images/portfolio/img2.jpg"
+              alt="foto mobile phone"
+              width="360"
+              height="300"
+            />
             <h3 class="sup-title">Cashless Payment</h3>
             <p class="base-text">Marketing</p>
           </li>
@@ -99,6 +101,8 @@
             <img
               src="./images/portfolio/img3.jpg"
               alt="foto mobile phone and laptop"
+              width="360"
+              height="300"
             />
             <h3 class="sup-title">Meditaion App</h3>
             <p class="base-text">App</p>
@@ -107,17 +111,29 @@
             <img
               src="./images/portfolio/img4.jpg"
               alt=" photo wehicle interrior and phone"
+              width="360"
+              height="300"
             />
             <h3 class="sup-title">Taxi Service</h3>
             <p class="base-text">Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio/img5.jpg" alt=" photo display phone" />
+            <img
+              src="./images/portfolio/img5.jpg"
+              alt=" photo display phone"
+              width="360"
+              height="300"
+            />
             <h3 class="sup-title">Screen Illustrations</h3>
             <p class="base-text">Design</p>
           </li>
           <li>
-            <img src="./images/portfolio/img6.jpg" alt=" photo girl student" />
+            <img
+              src="./images/portfolio/img6.jpg"
+              alt=" photo girl student"
+              width="360"
+              height="300"
+            />
             <h3 class="sup-title">Online Courses</h3>
             <p class="base-text">Marketing</p>
           </li>
@@ -125,6 +141,8 @@
             <img
               src="./images/portfolio/img7.jpg"
               alt="instagram page screenshot"
+              width="360"
+              height="300"
             />
             <h3 class="sup-title">Instagram Stories Concept</h3>
             <p class="base-text">Design</p>
@@ -133,12 +151,19 @@
             <img
               src="./images/portfolio/img8.jpg"
               alt="photo girl with fruits"
+              width="360"
+              height="300"
             />
             <h3 class="sup-title">Organic Food</h3>
             <p class="base-text">Web Site</p>
           </li>
           <li>
-            <img src="./images/portfolio/img9.jpg" alt="cup of cappuccino" />
+            <img
+              src="./images/portfolio/img9.jpg"
+              alt="cup of cappuccino"
+              width="360"
+              height="300"
+            />
             <h3 class="sup-title">Fresh Coffee</h3>
             <p class="base-text">Web Site</p>
           </li>
